# webwatcher

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.md  README.md  meson.build  post_install.py
data/: com.github.kjlaw89.site-monitor.appdata.xml  com.github.kjlaw89.site-monitor.desktop  com.github.kjlaw89.site-monitor.gresource.xml  com.github.kjlaw89.site-monitor.gschema.xml  com.github.kjlaw89.web-watcher.appdata.xml  com.github.kjlaw89.web-watcher.desktop  com.github.kjlaw89.web-watcher.gresource.xml  com.github.kjlaw89.web-watcher.gschema.xml  com.github.kjlaw89.webwatcher.appdata.xml  com.github.kjlaw89.webwatcher.desktop  com.github.kjlaw89.webwatcher.gresource.xml  com.github.kjlaw89.webwatcher.gschema.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright  rules
po/: POTFILES  com.github.kjlaw89.web_watcher.pot  com.github.kjlaw89.webwatcher.pot  com.github.robertsanseries.template-for-vala-apps.pot  pt_BR.po
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala  Properties.vala  Settings.vala
src/controllers/: AppController.vala
src/database/: Database.vala
src/enums/: AppEnums.vala
src/models/: BaseModel.vala  ResultModel.vala  SiteModel.vala
src/objects/: AppObject.vala
src/utils/: FileUtil.vala  StringUtil.vala  TimeUtil.vala  URLUtil.vala  WidgetUtil.vala
src/views/: AppIndicatorView.vala  AppView.vala  SiteFormView.vala  SiteListView.vala  SiteView.vala  WelcomeView.vala
src/widgets/: HeaderBar.vala  IndicatorItem.vala  SiteItem.vala
