sources = files(
    'configs/Constants.vala',
    'configs/Properties.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',

    'database/Database.vala',

    'enums/AppEnums.vala',

    'models/BaseModel.vala',
    'models/SiteModel.vala',

    'objects/AppObject.vala',

    'utils/FileUtil.vala',
    'utils/StringUtil.vala',
    'utils/TimeUtil.vala',
    'utils/URLUtil.vala',
    'utils/WidgetUtil.vala',
    
    'views/AppView.vala',
    'views/SiteFormView.vala',
    'views/SiteListView.vala',
    'views/WelcomeView.vala',

    'widgets/HeaderBar.vala',
    'widgets/SiteItem.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
