sources = files(
    'configs/Constants.vala',
    'configs/Properties.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',

    'database/Database.vala',

    'enums/AppEnums.vala',

    'models/BaseModel.vala',
    'models/ResultModel.vala',
    'models/SiteModel.vala',

    'utils/FileUtil.vala',
    'utils/StringUtil.vala',
    'utils/TimeUtil.vala',
    'utils/URLUtil.vala',
    'utils/WidgetUtil.vala',
    
    'views/AppIndicatorView.vala',
    'views/AppView.vala',
    'views/SiteFormView.vala',
    'views/SiteListView.vala',
    'views/SiteView.vala',
    'views/WelcomeView.vala',

    'widgets/HeaderBar.vala',
    'widgets/IndicatorItem.vala',
    'widgets/SiteItem.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
